paper/manuscript-v1/checkpoints/v5/source/chapters/05-p2.md
# 问题二：联合安排计算位置与数据搬运

## 同一核心内的数据复用与存储权衡

在问题二的系统设定中，被分配到同一个计算核心的全部子图在底层编译时被合并为一个整体硬件执行任务（Task）。这一微架构语义的变化带来了根本性的数据流动革新：在同一核心内部，先前执行的子图算子所生成的数据张量可以直接保留在该核心的片上私有缓存（L1 Buffer 与 Unified Buffer，UB）中，供后继子图中的算子直接读取复用，无需再经由外部主存（DDR）进行持久化中转。

然而，若数据生成算子与数据消费算子被分配至不同的计算核心，则数据依然必须通过跨核心通信链路传递：由源核心执行 `COPY_OUT` 将数据写入 DDR，再由目标核心执行 `COPY_IN` 将数据读入本地缓存。在硬件时序上，目标核心的读取操作必须在源核心写出操作彻底完成 500 cycles 之后方可启动。在此执行模型下，即使在方案提交文件（`node_to_subgraph`）中将每个计算算子单独划分为一个子图，也不会在硬件底层为每个算子生成孤立的物理 Task，子图序列仅用于指示底层编译器在各核心内部排定算子的先后执行次序。

同核心任务合并显著加深了算子分配与调度顺序之间的耦合关联，并引出了新的微架构存储权衡：

1. **缓存复用收益**：将具有密集张量消费关系的算子聚集至同一计算核心，可彻底消除跨核 DDR 往返读写流量以及 500 cycles 的跨核同步等待；
2. **片上存储驻留压力与溢出代价**：若过度追求局部复用而将算子集中，或者消费同一张量的多个算子在执行时序上相距过远，该中间张量就必须在片上私有缓存中维持长时间的驻留生命周期。当片上缓存容量不足以容纳活跃数据峰值时，官方编译系统将在其内部流程的第二阶段（Step 2）强制插入溢出换出与换入操作（spill），从而在执行阶段产生意料之外的二次 DDR 读写开销；
3. **空间复用与时间并行的冲突**：将数据消费算子分散至其他核心虽会引入边界数据搬运，但能有效利用多核计算资源展开并行计算，并释放本地片上存储压力。

因此，私有缓存容量限制与 Step 2 溢出（spill）深刻影响着系统的实际数据搬运总量。多核心调度算法必须在控制跨核数据流动的同时，防止片上工作量与存储过度聚集。

图 \ref{fig:p2-lifetimes} 采用一个包含 9 个物理张量的手算结构用例，展示了单核心排队执行时片上私有缓存占用的动态变化过程。需要指出的是，该图展示的是单核心在静态编译序列下的结构示意，横轴展示操作序号 $i = 0 \dots 7$（其中 0 与 7 分别对应初始与全部释放的空占用边界，序号来自官方编译第二阶段 Step 2，而非微架构物理执行周期 cycles），并非全量 100 张基准计算图的实测记录或真实的并行执行时间线。每个物理张量 $t$ 在该核心的生命周期定义为闭区间 $[f(t), \ell(t)]$，分别对应在该静态编译序列中第一次与最后一次触碰该物理张量的操作序号（末次触碰包含计算读取或外存写出等搬运操作）；张量在末次触及步骤 $\ell(t)$ 期间仍持续驻留在片上私有缓存中，直至后继步骤启动时方被完全释放。在单核心物理容量（L1 Buffer 容量为 512 KiB，Unified Buffer 容量为 128 KiB）约束下，若某步骤同时存在多项未释放的输入张量与新分配的输出张量，将产生瞬时存储占用峰值（图中示例在步骤 2 达到 L1 峰值 512 KiB，在步骤 4 达到 UB 峰值 72 KiB）。该示例为理解调整算子顺序能够规避潜在溢出换出提供了物理直观；本文主算法并未在此建立全局无溢出的精确容量调度保证，而是通过超图割与流水线工作量保护进行结构化解耦。

![单核心张量生命周期与片上私有缓存容量占用示例。上部展示 9 个物理张量在闭区间内的驻留条带；中部与下部展示静态编译操作序号下的 L1 Buffer（容量 512 KiB）与 Unified Buffer（容量 128 KiB）存储占用阶梯曲线，说明输入与输出张量在操作边界共同驻留对局部容量峰值的影响。](../figures/team-v5/p2-lifetimes.pdf){#fig:p2-lifetimes width=100%}

## 利用执行资源空闲区间安排计算

为了在调度构建阶段兼顾计算流水线的利用率，算法设计了基于空闲时间区间（gap intervals）的拓扑编排机制。该机制实时维护各计算核心在输入计算图中实际出现的各类执行流水线（如 `PIPE_M`、`PIPE_V` 等）上已排定算子的占用时间区间集合。

在处理计算链时，算法沿链内依赖拓扑顺序依次为各算子寻找可行空闲区间。设待排定算子 $v$ 的计算时长为 $d_v = \max(1, \text{cycles}_v)$，其在当前部分调度下的估计最早数据就绪时刻为 $r_v$。记 $\mathcal{I}_{k, p_v}$ 为核心 $k$ 上对应流水线 $p_v$ 已占用时间区间的并集。算法在满足数据依赖约束的前提下，在时间轴上寻找最早满足互不重叠条件的空闲时间窗口，选取最早的可行启动时刻 $s_v$：

$$s_v \ge r_v, \qquad [s_v, s_v + d_v) \cap \mathcal{I}_{k, p_v} = \emptyset.$$

时间区间采用左闭右开表示，允许后继算子在前序算子完成的时钟周期无缝衔接。在多支路汇聚节点处，为了避免局部贪心导致单侧支路过度滞后，算法在汇合算子两侧至多联合枚举 $K^2$ 种核心指派组合，综合评估不同核心搭配下的完成时刻。

需要强调的是，上述空闲区间计算仅为引导候选方案构造的启发式时间代理（proxy heuristic），其并未模拟底层 DDR 访问仲裁、总线带宽争用以及复杂的片上存储空间动态分配。因此，估计时刻 $s_v$ 既不构成全局 Makespan 的数学上界，亦不构成理论下界。方案的物理执行时刻最终由官方离散事件仿真器推进确定。

::: figure-plan {#fig-p2-transition}
引用三问执行条件对照图，说明同一个核心保留数据与在不同核心之间复制数据的区别。正文解释保存期间占用L1/UB；不把估计区间画成实际事件。
:::

## 基于超图连接度模型的复制量度量

在普通图模型中，传统图割算法将数据流动简化为边权切分，无法准确刻画“一对多”数据复用的真实开销。

考察一个典型的复用场景：算子 $u$ 生成大小为 8 B 的张量 $t$，算子 $v_1$ 与 $v_2$ 均读取 $t$。在硬件执行层面上，若将读取算子 $v_1$ 与 $v_2$ 分配至同一个远端核心，该核心只需从 DDR 读入一次 8 B 数据即可供两个算子共同使用（对应源核心一次 `COPY_OUT` 与目标核心一次 `COPY_IN`，共产生 16 B 边界流量）；若仅将 $v_1$ 移回 $u$ 所在核心，由于 $v_2$ 仍驻留在远端，该远端核心依然需要完整搬入该张量，边界复制量依然维持 16 B；只有当 $v_1$ 与 $v_2$ 均被移回 $u$ 所在核心时，跨核数据传递需求才彻底消失，相关边界复制量降为 0 B。在不同的核心分配下，该张量引发的边界复制量分别为 16 B、16 B 与 0 B。这种非线性特征表明，边的割断无法等价于数据复制。

为精确刻画多算子共同使用同一数据的共享边界，本文引入**超图**（hypergraph）模型 $\mathcal{H} = (V, \mathcal{E})$。超图由算子顶点集 $V$ 与**超边**（hyperedge）集合 $\mathcal{E}$ 构成，每条超边连接任意非空的顶点子集（允许包含单个顶点）[5]。在并行计算与数据划分领域，利用超图连接度模型刻画多处理器间的通信开销是经典的方法论基础[3]。超图仅表示算子间的数据关联关系，不指示计算先后顺序；原计算图的有向拓扑依赖另行独立维护。

### 模型定义与适用领域

超图模型严格适用于如下计算图领域：

1. 顶点集 $V$ 完整包含除跨边界核外搬运操作 `COPY_IN` 与 `COPY_OUT` 之外的全部原始待调度算子；
2. 严格拒绝逻辑张量别名（`logical_tid`），每个物理张量具有唯一的物理生成算子，张量大小 $b_t$ 为非负整数；
3. 直接算子间依赖边（direct op-op edges）亦纳入模型统一处理。

### 超边构成与权值定义

对于计算图中的数据传递关系，超边集 $\mathcal{E}$ 与固定常数项 $C$ 按如下规则精确构建：

1. **外部输入张量**：该张量在计算图内无生成算子，其超边引脚集合仅包含所有读取该输入的算子子集 $\operatorname{cs}$。每增加一个需要该输入的核心，需额外从 DDR 搬入 $b_t$ 字节，故超边权重赋值为 $w_e = b_t$；其首次读入的基础复制量计入全局常数项 $C$；
2. **中间数据张量**：超边引脚集合包含其生成算子以及全部读取该张量的计算算子 $\operatorname{cs} \cup \{\operatorname{producer}\}$。依官方冻结评测编译语义，跨核心访问时涉及源核心写出外存与目标核心读入本地的一对操作，故超边权重赋值为 $w_e = 2b_t$（硬件常数严格依据源码，不作未经证实的广播假设）；若该张量同时被外部 `COPY_OUT` 消费或在图内无后继消费者，其写出外存的固定开销 $b_t$ 累加至常数项 $C$；
3. **直接算子依赖边**：引脚集合为 $\{u, v\}$，权重赋值为 $w_e = 2 \times \operatorname{data\_size}(e)$；
4. 引脚集合为空或权重为零的超边被直接丢弃。

### 预 Step 2 原始复制字节数公式

给定算子到计算核心的指派映射 $a: V \to \{0, 1, \dots, K-1\}$，定义 $\lambda_e(a)$ 为超边 $e$ 中全部算子所跨越的不同核心数量（无量纲整数）。在官方评测程序第二阶段（Step 2）插入缓存溢出换入换出之前，方案的**预 Step 2 原始复制字节数**（pre-Step2 original COPY bytes）精确满足：

$$D_{\mathrm{pre2}}(a) = C + \sum_{e \in \mathcal{E}} w_e \bigl(\lambda_e(a) - 1\bigr).$$

其中，$D_{\mathrm{pre2}}$、$C$ 与 $w_e$ 的单位均为字节（B）。当一条超边的所有相关算子均指派给同一核心时，$\lambda_e(a) = 1$，对求和式的贡献为 0；每向一个新核心延伸，均线性增加 $w_e$ 字节。该指标严格度量了划分切口在未发生缓存溢出时的固有通信量，并不等同于最终包含溢出换入换出的额外 DDR 搬运量（`added_copy_bytes`），亦不代表 Makespan。

![同一张量的计算操作分配。图中 $u$ 生成 $t$，$v_1, v_2$ 读取 $t$；$\lambda_t$ 表示这三个操作所在的不同核心数量。16 B、16 B、0 B 仅统计该张量的边界复制，线条只表示集合关联。](../figures/fig-hypercut-v2.png){#fig:hypercut width=100%}

### 分组移动的增量更新法则

当算法将一组算子 $A \subset V$ 从源核心 $s$ 整体迁移至目标核心 $t$（$s \ne t$）时，要求 $A$ 中的所有算子在迁移前必须处于同一源核心 $s$（不支持跨源核心的混合分组移动）。

对于任意与 $A$ 相交的超边 $e$，令 $n_{e, s}$ 与 $n_{e, t}$ 分别为迁移前超边 $e$ 在源核心与目标核心上的引脚数量，令 $m_e = |e \cap A|$ 为超边 $e$ 中被迁移的引脚数。超边 $e$ 的复制字节变化量 $\Delta_e$ 严格满足：

$$\Delta_e = w_e \left( \mathbf{1}\{n_{e, t} = 0\} - \mathbf{1}\{n_{e, s} = m_e\} \right).$$

其中 $\mathbf{1}\{\cdot\}$ 为指示函数。若目标核心原先未包含该超边算子，则新增一个跨核副本（增加 $w_e$）；若源核心所包含的该超边算子被全部移走，则彻底消除源核心的副本需求（减少 $w_e$）。总变化量为所有相交超边 $\Delta_e$ 的代数和。在连续执行多次分组调整时，算法只需增量维护各超边在各核心的引脚计数 $n_{e, k}$。

## 计算工作量约束下的局部最小割方法

为了优化上述超图连接度目标，算法在空闲区间构造方案的基础上，选取两个核心 $a, b$ 以及最多 16 条前后相连的计算链（chain，总数 $w \le 16$）作为局部调整区域。所选区域之外的全部算子核心分配保持锁定，区域内的各条计算链在核心 $a$ 与 $b$ 之间决策归属。

### 辅助网络构建与精确映射

在固定范围外算子后，最小化二核心之间的超图连接度可通过构建有向辅助网络转化为源汇最小割（minimum source-target cut）问题。利用有向辅助网络将特定超边切分代价转化为源汇割模型在超图割文献中已有理论研究[8]；本实现针对固定引脚与二核心指派给出具体的 OR 辅助网络映射与代数证明，该构造并不推广至任意次模分割函数，亦不推出带容量约束的全局 Makespan 最优。

设源点对应核心 $a$（割的源侧为分配至 $a$ 的单元），汇点对应核心 $b$（割的汇侧为分配至 $b$ 的单元）。对于每条超边 $e$，其在局部自由可移动单元集合之外的固定引脚所归属的核心集合记为 $\operatorname{fixed\_cores}$（注意：$\operatorname{fixed\_cores}$ 可能包含核心 $a$、核心 $b$，亦可能包含其他计算核心，且可能为空集）。

算法无条件累加所有超边的固定项至基准常数：

$$\text{offset} = \sum_{e \in \mathcal{E}} w_e (|\operatorname{fixed\_cores}| - 1).$$

特别地，当某条超边在调整区域外无任何固定引脚时，$\operatorname{fixed\_cores} = \emptyset$，其贡献项为 $-w_e$。

网络弧权与辅助节点按如下规则构造：

1. **有限弧权和与无穷容量设定**：
   $$\text{finite\_sum} = \sum_{e \in \mathcal{E}} w_e \left( \mathbf{1}\{a \notin \operatorname{fixed\_cores}\} + \mathbf{1}\{b \notin \operatorname{fixed\_cores}\} \right), \quad \infty = \text{finite\_sum} + 1.$$
2. **核心 $a$ 覆盖代价辅助节点 $aux_a$**：若 $a \notin \operatorname{fixed\_cores}$，建立辅助节点 $aux_a$。从超边 $e$ 内的各个自由计算链节点向 $aux_a$ 连接容量为 $\infty$ 的有向弧，并从 $aux_a$ 向汇点连接容量为 $w_e$ 的有向弧。若该超边有任意一条链被分配给核心 $a$（落入源侧集合 $S$），最小割必须切断容量为 $w_e$ 的弧；
3. **核心 $b$ 覆盖代价辅助节点 $aux_b$**：若 $b \notin \operatorname{fixed\_cores}$，建立辅助节点 $aux_b$。从源点向 $aux_b$ 连接容量为 $w_e$ 的有向弧，并从 $aux_b$ 向该超边的各个自由计算链节点连接容量为 $\infty$ 的有向弧。若有任意一条链被分配给核心 $b$（落入汇侧集合 $T$），最小割必须切断容量为 $w_e$ 的弧；
4. **锚定弧（anchors）**：若某计算链单元 $u$ 被强制锁定在核心 $a$，则添加容量为 $\infty$ 的源点指向 $u$ 的弧；若锁定在核心 $b$，则添加 $u$ 指向汇点的 $\infty$ 弧。

该辅助网络的最大流值 $F$ 与局部超图连接度严格满足恒等关系：$\operatorname{Cost} = \text{offset} + F$（需特别注意符号区分：图 \ref{fig:p2-local-cut} 中标注的集合符号 $F$ 指代该超边在局部调整区外已固定触及的核心集合 $\operatorname{fixed\_cores}$，而正文代数式中的标量 $F$ 则代表该辅助网络求得的源汇最大流值，二者含义不同，避免混淆）。在具体实现中，辅助网络中连接结构节点的无穷大容量实际取为严格大于全部有限弧权之和的常数 $M_\infty = \text{finite\_sum} + 1$，确保割弧仅落在对应核心覆盖代价的容量弧上。

图 \ref{fig:p2-local-cut} 详细给出了两种典型固定边界下的辅助网络构造与代价核算示例：
1. **例 A（固定核心集合为空，$F = \emptyset$）**：超边连接两条局部可移动链 $u, v$，超边权重为 $w$。基准偏移为 $\text{offset} = -w$。若 $u, v$ 同归属于某一核心（例如均分在核心 $a$ 或均分在核心 $b$），网络割容量为 $w$，加上偏移后局部复制代价为 $C = w - w = 0$；若 $u, v$ 分跨两个核心，两侧辅助节点的容量边均被割断，割容量为 $2w$，加上偏移后的局部复制代价为 $C = 2w - w = w$；
2. **例 B（已固定触及核心 $a$ 与另一核心 $c$，$F = \{a, c\}$）**：由于核心 $a$ 已在固定集合中，系统不再为核心 $a$ 建立容量边，仅当有链移入新增核心 $b$ 时才产生新增复制，基准偏移为 $\text{offset} = +w$。若链全部保留在核心 $a$，割容量为 0，总代价为 $C = 0 + w = w$；若有链被分配至核心 $b$，割断指向核心 $b$ 的容量边（权重 $w$），总代价为 $C = w + w = 2w$。两类情形求得的割容量与偏移之和均与真实超图连接度严格相等。

### 计算工作量上限保护（Load Guard）

单纯追求复制字节最小化可能导致最小割将绝大部分计算集中指派至单一核心，诱发严重的计算延迟倾斜。为此，算法引入了受工作量保护的闭环最小割算法（`load_guarded_cut`）。

算法统计各核心在各计算流水线上的初始累计时长，取全核心初始工作量的峰值作为各流水线的硬性工作量上限（caps）。若求解最小割后得到的分配方案导致某个核心在某条流水线上的总工作量超出了预设上限，算法将在导致超额的迁入链中，选出在该流水线上耗时最长的一条链，将其锚定回初始分配状态，并重新求解辅助网络的最小割。

**命题5.1（局部复制量与工作量保护性质）。** 若初始分配满足流水线工作量上限，且每次锚定均将单元固定回其初始核心，则 `load_guarded_cut` 算法在至多 $w + 1$ 次最大流求解内必终止，且终止时所得方案的局部预 Step 2 复制量 $D_{\mathrm{pre2}}$ 绝不大于初始分配，且各流水线工作量均不超过上限。

**证明。** 初始分配始终完全满足工作量上限约束。由于每次锚定均与初始分配一致，初始分配在每一次增加锚定约束后的辅助网络中始终构成一个合法的割。根据最小割的最优性，求得的最小割代价必不高于初始分配的代价值。由于局部自由链的总数为 $w$（$w \le 16$），若每次迭代均发生工作量超限，每次至少有一条链被永久锁定回原位置。在最坏情况下，经过至多 $w$ 次锁定后，全部流动链均被重置回初始分配，此时工作量超限自然消除。因此，算法必在至多 $w + 1$ 次求解内终止，且终止解的局部复制字节数不高于原方案。 $\square$

需要明确指出的是，命题 5.1 证明的仅是在给定的局部二核心区域及锚定启发过程下预 Step 2 复制量不增加且流水线工作量不超限。流水线工作量上限是通过迭代式的启发式锚定进行防护，而非单次带约束规划的全局最优解；该机制**并不保证**片上缓存不发生溢出（spill），**并不保证**全局 Makespan 一定缩短，亦非全图范围的多核全局最优解。算法仍须依赖最终的离散事件仿真来进行综合裁决。

![二核心局部超图割辅助网络构建与工作量保护流程。上部展示超边在固定核心集合为空集与非空集合时的有向辅助网络映射，说明割容量加上固定偏移等于局部超边复制代价；下部展示结合流水线工作量上限保护的迭代锚定求解流程。](../figures/team-v5/p2-local-cut.pdf){#fig:p2-local-cut width=100%}

## 完整算法流程与候选方案选优

**算法2：问题二联合切分与多核调度算法（P2 Solver）。**

```text
输入：原始计算图 G、核心数 K、官方硬件配置 config。
输出：合法的切分与调度方案 P = (node_to_subgraph, core_schedules)。
1. 调用自适应装箱模块生成基础基线方案 baseline（P0）；
2. 尝试利用流水线空闲区间重排计算顺序，构造 gap 候选方案（P1）；若遇到不支持的拓扑结构或构造异常，直接安全回退至 baseline；
3. 以 gap 方案为基准，提取最多 16 条链构建局部超图，执行受负载保护的二核心最小割（gap_hyperrefine）；
4. 统计细化前后的预 Step 2 复制字节数：
     若 after_original_copy_bytes < before_original_copy_bytes（实现严格减少）：
         调用重定时模块（gap_retime）重新排定执行顺序，生成 hypergap 候选方案（P2）；
     若复制字节未严格减少：
         跳过 hypergap 构造，严格保留未经修改的原 gap 方案参与后续比选；
5. 汇总互不相同的完整候选方案（在 baseline, gap, hypergap 中至多保留 3 份不同方案）；
6. 严格按构造先后顺序，向底层在线评测适配器提交评分请求（至多 3 次评分请求）。单次评测必须成功返回原生评测且状态正常（route == 'native' 且 status == 'ok'）的得分向量方用于比较；若评测返回非原生路由（如记录的 e0_fallback）或评测抛出异常，适配器将拒绝采纳该结果并抛出错误，外层控制器捕获异常后安全终止本轮选优，直接返回保底的 baseline 方案；
7. 依据有效原生评测反馈的目标向量 (Makespan, added_copy_bytes) 按字典序选优，输出综合表现最佳的合法方案。
```

在该体系中，`baseline`、`gap` 与 `hypergap` 代表本求解流程中生成的不同方案构型。预 Step 2 复制字节的减少仅作为触发 `gap_retime` 的控制门槛，并不用于提前剪除未修改的 `gap` 方案。在线评测上限严格冻结为 3 次评分请求，评测异常时统一安全回退至 baseline。

图 \ref{fig:p2-three-plans} 完整呈现了问题二三方案的构造分支、去重与受限评测决策流：
1. **基础方案 P0 保底**：P0 由自适应装箱生成并始终保留，当后继候选不支持、构造异常或评测不可用时立即作为安全回退方案输出；
2. **空闲区间方案 P1**：尝试构造 P1，仅在 P1 构造成功后，才以原始 P1 为基准启动局部超图调整；若 P1 与 P0 相同，则不重复入列；
3. **局部改进方案 P2 的门槛控制**：仅当局部调整后得到的预 Step 2 原始复制字节数（pre-Step 2 original COPY bytes）严格减少且重排成功时，方生成完整的 P2 方案（`hypergap`）；若字节数未严格减少或调整不支持，则跳过 P2；
4. **按序去重与受限评测**：完整方案按 P0 $\to$ P1 $\to$ P2 的构造顺序进行去重。若去重后仅有 1 份有效方案，直接输出 P0 而不发起任何在线评测；若存在 2 份或 3 份互不相同的方案，向在线评分接口提交请求（总调用次数严格不超过 3 次）。在当前论文的固定求解器版本中，该评分接口为原生离散仿真 E2；独立的外部 E0 复验作为离线验证单独报告，不计入在线求解调用账；
5. **字典序决选**：依评测返回的目标向量 $(M_2, \text{added\_copy\_bytes})$ 按严格字典序择优，平局时优先保留构造序列靠前的方案。需要强调的是，局部原始 COPY 字节数门槛仅为触发 P2 生成的内部过滤条件，并不构成官方最终 Makespan 必定改善的理论保证。

![问题二三种候选方案的构造分支与评测选优决策流。展示基础方案 P0、空闲区间方案 P1 与局部超图调整方案 P2 的构造分支条件、按构造顺序去重机制以及至多 3 次在线评分的字典序择优规则。](../figures/team-v5/p2-three-plans.pdf){#fig:p2-three-plans width=100%}

## 全量实验评测与结果分析

本文算法在官方提供的 100 张全量基准计算图、涵盖 1 至 5 核心的全部 500 种测试组合上进行了完整的端到端求解与评测，所有方案均顺利通过官方合法性校验并正常推进完成。测试结果依据 `paper/manuscript-v1/data/all-results.csv` 以及固定评测数据资产（`p2-audit.json.gz`，对应求解器 Commit `c66559a`）进行了精确复核。

下表分别列出题目规定的官方基准平均加速比，以及使用算法输出方案计算的平均加速比。

| 核心数量 | 1 | 2 | 3 | 4 | 5 |
|---|---:|---:|---:|---:|---:|
| 官方口径平均加速比 | 1.0000 | 2.3167 | 3.2356 | 3.9711 | 4.5498 |
| 算法输出方案的 $\operatorname{mean}(B/M)$ | 1.2061 | 2.3167 | 3.2356 | 3.9711 | 4.5498 |
| 对前一固定完整版本改善/持平/退化 | 59/41/0 | 64/36/0 | 54/46/0 | 49/51/0 | 42/58/0 |
| 求解时间均值 / s | 2.613 | 3.863 | 4.251 | 4.498 | 4.921 |

如表中数据所示：

1. **多核加速比与单核比值解析**：在 2 至 5 核场景下，官方主口径平均加速比分别达到 2.3167、3.2356、3.9711 以及 4.5498。在单核场景下，算法输出方案相比官方单核基线取得了 1.2061 的 $B/M$ 比值（该比值超出基线 1.0 的幅度为 20.61%，反映算法输出的单核方案 Makespan 优于官方基准，不代表完成时间单调下降 20.61%）。表中两行在单核场景下的分子 $B$ 均严格采用官方单核基准 Makespan，差异源于分母方案不同（官方主口径行以官方基准方案自身为分母，比值为 1.0000；第二行以算法实际输出方案为分母，比值平均为 1.2061）。与前一固定版本相比，全量 500 个测试网格中共有 268 个用例缩短了 Makespan，232 个用例持平，实现零退化（degrade = 0）；全网格共有 69 张计算图在至少一个核心数下取得了性能突破；
2. **通信流量与多核权衡**：全量 500 个用例的额外 DDR 搬运总量从基准版本的 3,043,860,416 字节上升至 4,159,738,560 字节（增幅为 36.66%）。深入分析 500 个用例的性能变动分布：共有 55 个用例实现了执行时间与搬运量双重下降；199 个用例执行时间显著缩短但搬运量有所增加；14 个用例执行时间缩短而搬运量持平；其余 232 个用例两项指标均保持不变。该分布反映了算法以主目标（Makespan）优先的选优取向：在版本迭代中观察到了执行时间显著下降与额外搬运量增加相伴随的成对数值变动，此处仅客观记录前后版本对比的数据呈现，不作未经独立消融隔离的因果机制归因；
3. **评测调用账与计算效率**：在全量 500 次独立求解过程中，累计发起 1131 次在线 native E2 评测请求，全部成功返回原生结果，未触发任何向 E0 的异常回退。独立外部 E0 仿真复验亦全部顺利完成。采用最近秩次法（nearest-rank，取第 $\lceil 0.95n \rceil$ 位），全量 500 个用例的求解程序物理墙钟时间均值为 4.029 秒，95% 分位数（第 475 位）为 18.841 秒，最大求解时间为 40.187 秒；独立的外部 E0 仿真耗时均值为 1.410 秒，95% 分位数（第 475 位）为 6.592 秒，最大值为 13.980 秒。全网格耗时稳定在建议的高效时间范围之内。

::: figure-plan {#fig-p2-results}
显示固定完整版本的平均加速比，以及500组时间和搬运变化。前后版本、仅使用一个核心时的基线分母和全部原始值都保持不变。图注区分复制字节与完成时间，采用各自明确的单位。
:::

## 减少搬运量反而增加完成时间的反例（C04）

为了严格检验“仅按片上容量和搬运量构造调度方案”是否存在固有缺陷，前期研发实验针对另一种固定构造策略（代码代号 C04）对六个预先指定的 5 核心用例进行了对比评测。

在该对照实验中，C04 生成的六份方案在格式与时序上完全合法，且经官方 Step 2 编译确认未插入任何由于容量超限导致的缓存换入换出（spill 为 0）。然而，其最终 Makespan 全面劣于本文主算法，对比数据如下表所示：

| 用例名称 | 本文主算法 / cycles | C04 对照方案 / cycles | 相对变慢幅度 |
|---|---:|---:|---:|
| case_005 | 33,515 | 38,209 | +14.01% |
| case_016 | 2,091,375 | 2,399,125 | +14.72% |
| case_019 | 16,247 | 28,514 | +75.50% |
| case_025 | 942,938 | 975,658 | +3.47% |
| case_039 | 449,653 | 494,942 | +10.07% |
| case_075 | 343,930 | 452,120 | +31.46% |

尤其在 `case_019`、`case_039` 与 `case_075` 中，C04 方案的边界 COPY 字节数明显低于本文主算法，但其执行完成时间却出现了大幅退化（在 `case_019` 中变慢达 75.50%）。

图 \ref{fig:p2-counterexample} 给出了 `case_019` 在官方离散事件仿真下的执行时序对比。数据显示，C04 方案的边界 COPY 字节数显著低于主算法，且无片上容量不足引发的 Step 2 缓存换入换出（spill 为 0），但其最终执行完成时间显著增加（Makespan 变大 75.50%）。关于硬件资源利用与等待时长的具体归因，仍待进一步的事件分类统计验证。

::: figure-plan {#fig-p2-counterexample}
case_019、5 Core，主算法与C04的官方事件使用相同时间尺度。分别显示Task与Pipe区间；主算法16247 cycles，C04为28514 cycles。图注写明C04没有容量不足引起的缓存换入换出，但更慢。不把白色间隔解释为未经证实的原因。
:::

上述限定反例表明：单纯优化静态通信数据量并不能直接保证任务执行时间的缩短。

## 计算复杂度与算法护栏分析

算法在求解过程中将各阶段计算开销解耦：

1. **图拓扑识别与链分解**：构建算子依赖拓扑并提取独立计算链；
2. **空闲区间扫描**：在候选构造过程中，算子插入需遍历维护的时间段集合，设累计扫描的时间段总数为 $Q$；
3. **汇聚点配对检查**：在多支路汇合节点处枚举核心指派组合，涉及至多 $K^2$ 种局部搭配与对应的排定开销；
4. **局部超图最小割与保护循环**：设共优化 $R$ 个局部区域。第 $j$ 个区域的辅助网络包含 $n_j$ 个节点与 $m_j$ 条弧，内部包含 $w_j \le 16$ 条自由链。采用 Dinic 算法[9]单次求解最大流的最坏时间复杂度为 $O(n_j^2 m_j)$。在工作量保护循环下，每个区域至多求解 $w_j + 1$ 次最大流，局部割部分总时间界为 $\sum_{j=1}^R (w_j + 1) T_{\mathrm{cut}}(n_j, m_j)$；
5. **离散事件评测代价**：在线评测严格限制在至多 $b \le 3$ 次原生 E2 评测调用，总时间包含评测耗时项 $\sum_{j=1}^b T_j$。

受评测仿真内部事件推进开销制约，常数次评测限制并不构成全流程低多项式时间的代数证明，求解耗时的可控性根本上依赖于有限候选与轻量级启发式护栏的结合。
